# python_data_analysis

./: 001_additional_playwright_scrapper.py  00_website_scrapper.py  01_series.py  02_a_dataframe_practice.ipynb  02_dataframe.py  03_a_numpy_2d_basics.ipynb  03_numpy_basics.ipynb  04_requests_basic_API.ipynb  05_api_random_user.ipynb  05_b_fruitvice_api_practice.ipynb  05_test_flask_api.py  06_decorator_basic.py  07_02_dataframe.ipynb  07_03_pandas_data_wrangling.ipynb  07_04_data_wrangling_laptop_price.ipynb  07_pandas_01.ipynb  08_eda_laptop_pricing.ipynb  08_eda_used_car_pricing.ipynb  08_plots.ipynb  09_linear_and_multi_reg.ipynb  README.md  pyproject.toml  python_playground.ipynb
.ipynb_checkpoints/: 07_pandas_01-checkpoint.ipynb
